--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-dlib==19.21.0
-docutils==0.16
+certifi==2021.10.8
+chardet==4.0.0
+click==8.0.3
+dlib==19.22.1
+docutils==0.18.1
 face-recognition==1.3.0
 face-recognition-models==0.3.0
-idna==2.10
-Kivy==2.0.0rc3
+idna==3.3
+Kivy==2.0.0
 Kivy-Garden==0.1.4
-numpy==1.19.1
-opencv-python==4.4.0.42
-Pillow==7.2.0
-Pygments==2.6.1
-requests==2.24.0
-urllib3==1.25.10
+numpy==1.21.4
+opencv-python==4.5.4.60
+Pillow==8.4.0
+Pygments==2.10.0
+requests==2.26.0
+urllib3==1.26.7
